--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ Jinja2==2.11.3
 jsonschema==3.2.0
 Mako==1.1.4
 MarkupSafe==1.1.1
-mysqlclient==2.0.3
-psycopg2==2.8.6
+#mysqlclient==2.0.3
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.1.0
 PyMySQL==1.0.2
